--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>Nicolas Placeres Castifro</h1>
+					<h1>Nicolas Placeres Castifor</h1>
 					<h3>Web Designer | nicolasplaceresCastifor@gmail.com</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
