--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 						<a href="#"><i class="icon-linkedin"></i></a>
 						<a href="#"><i class="icon-apple"></i></a>
             <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+            <a href="#"><i class="icon-apple"></i></a>
 
 
 					</p>
