--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this page -->
     <link href="css/main.css" rel="stylesheet">
-
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+ 	 <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
@@ -39,10 +38,10 @@
 				<div class="row">
 					<div class="dropdown">
 						<ul id="nav" class="nav">
-							<li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="icon-briefcase"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="fa fa-user"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="fa fa-file"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="fa fa-briefcase"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="fa fa-envelope"></i></a></li>
 						</ul><!--/ uL#nav -->
 					</div><!-- /.dropdown -->
 
@@ -78,7 +77,7 @@
 					<p>I work for a company called Paygroup, I am currently SQA in swiching of Transactions. For my free time post faculty work on individual projects such as Web Pages, design of icons, brochures, icons and flyers. I like the font-end very much, although I have experience in both of them.</p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
+					<p><a href="#"><i class="fa fa-file-pdf-o"></i></a> <sm>DOWNLOAD PDF</sm></p>
 				</div>
 
 			</div><!--/.row -->
@@ -321,7 +320,7 @@
 				<div class="col-lg-3">
 					<p>CANALS OF ENGLAND</p>
 				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-					<sm><i class="icon-tag"></i> design</sm></more>
+					<sm><i class="fa fa-tag"></i> design</sm></more>
 				</p>
 				</div>
 
@@ -331,7 +330,7 @@
 				<div class="col-lg-3">
 						<p>SANKEY</p>
 					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> front-end</sm></more>
+						<sm><i class="fa fa-tag"></i> front-end</sm></more>
 					</p>
 				</div>
 
@@ -341,7 +340,7 @@
 				<div class="col-lg-3">
 						<p>WE GROW</p>
 					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> web design</sm></more>
+						<sm><i class="fa fa-tag"></i> web design</sm></more>
 					</p>
 				</div>
 
@@ -377,13 +376,14 @@
 				<div class="col-lg-3">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
-						<a href="#"><i class="icon-dribbble"></i></a>
-						<a href="#"><i class="icon-twitter"></i></a>
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-linkedin"></i></a>
-						<a href="#"><i class="icon-apple"></i></a>
+						<a href="#"><i class="fa fa-dribbble"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="#"><i class="fa fa-linkedin"></i></a>
+						<a href="#"><i class="fa fa-apple"></i></a>
             <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            <a href="#"><i class="icon-apple"></i></a>
+            <a href="#"><i class="fa fa-apple"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
 
 
 					</p>
