--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
  <script src="js/Chart.js"></script>
  <script src='js/script.js'></script>
 
+
+
 </head>
 
 
@@ -46,19 +48,30 @@
     </div><!--/ #topbar-inner -->
 	</header>
 
-<section id='banner'>
-    <div id="headerwrap">
-      <div class="container">
-        <div class="row centered">
-          <div class="col-lg-12">
-            <h1>Nicolas Placeres Castifor</h1>
-            <h3>Web Designer | nicolasplaceresCastifor@gmail.com</h3>
-          </div><!--/.col-lg-12 -->
-        </div><!--/.row -->
-      </div><!--/.container -->
-    </div><!--/.#headerwrap -->
-  </section>
+<section id='particles-js'>
+</section>
 
-	<section id='body'></section>
+<div id="headerwrap">
+  <div class="container">
+    <div class="row centered">
+      <div class="col-lg-12">
+        <h1 id="nombre">Nicolas Placeres Castifor</h1>
+        <h3 id="nombre">Web Designer | nicolasplaceresCastifor@gmail.com</h3>
+      </div><!--/.col-lg-12 -->
+    </div><!--/.row -->
+  </div><!--/.container -->
+</div><!--/.#headerwrap -->
+
+
+<!--div id='particles-js'>
+
+</div-->
+
+<section id="body">
+
+</section>
+
+<script src="js/particles.js"></script>
+<script src="js/particulas.js"></script>
 </body>
 </html>
