--- a/index.html
+++ b/index.html
@@ -8,38 +8,42 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <!-- Custom styles for this page -->
- <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 
 
- <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
- <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
- <script src="js/jquery.min.js"></script>
- <script type="text/javascript" src="js/smoothscroll.js"></script>
- <script src="js/Chart.js"></script>
- <script src='js/script.js'></script>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
+  <script src="js/Chart.js"></script>
+  <script src='js/script.js'></script>
 
 
 
 </head>
 
 
-<body>
+<body data-spy="scroll" data-offset="0" data-target="#nav">
 	<header id="section-topbar">
     <div class="container">
       	<div class="row">
           <div class="dropdown">
         		<nav>
         			<ul>
-        				<a href='#'><li><i class="fa fa-user"></i></li></a>
-        				<a href='#'><li><i class="fa fa-file"></i></li></a>
+                <li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="fa fa-user"></i></a></li>
+                <li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="fa fa-file"></i></a></li>
+        				<!--a href='#'><li><i class="fa fa-user"></i></li></a>
+        				<a href='#resume'><li><i class="fa fa-file"></i></li></a-->
         			</ul>
 
         				<img id='logo' src='pictures/logo.png'>
 
         			<ul>
-        				<a href='#'><li><i class="fa fa-briefcase"></i></li></a>
-        				<a href='#'><li><i class="fa fa-envelope"></i></li></a>
+                <li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="fa fa-briefcase"></i></a></li>
+  							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="fa fa-envelope"></i></a></li>
+        				<!--a href='#work'><li><i class="fa fa-briefcase"></i></li></a>
+        				<a href='#contact'><li><i class="fa fa-envelope"></i></li></a-->
         			</ul>
         		</nav>
           </div> <!--/ #dropdown -->
@@ -366,18 +370,18 @@
 				</div>
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
-						william@blacktie.co <br/>
+						nicolasplacerescastifor@gmail.com <br/>
 					</p>
 					<p><t>Adress</t><br/>
-						Some Ave. 987 <br/>
-						Postal 23892 <br/>
-						London, England. <br/>
+						Montevideo <br/>
+						Uruguay <br/>
+            <br/>
 					</p>
 					<p><t>Phone</t><br/>
-						+55 8933-2383 <br/>
+						+598 099-572-239 <br/>
 					</p>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3 social_link">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
 						<a href="#"><i class="fa fa-dribbble"></i></a>
@@ -388,8 +392,6 @@
             <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
             <a href="#"><i class="fa fa-apple"></i></a>
             <a href="#"><i class="fa fa-facebook"></i></a>
-
-
 					</p>
 				</div>
 			</div><!--/.row -->
@@ -398,7 +400,7 @@
 
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>Created by <a href="#">Nicolas Placeres</a></p>
 
 		</div>
 	</div>
