--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="row centered">
       <div class="col-lg-12">
         <h1 id="nombre">Nicolas Placeres Castifor</h1>
-        <h3 id="nombre">Web Designer | nicolasplaceresCastifor@gmail.com</h3>
+        <h3 id="nombre">Web Designer - SQA - Developer | nicolasplaceresCastifor@gmail.com</h3>
       </div><!--/.col-lg-12 -->
     </div><!--/.row -->
   </div><!--/.container -->
@@ -79,10 +79,12 @@
 			<div class="row">
 
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>ABOUT</h5>
+					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I work for a company called Paygroup, I am currently SQA in swiching of Transactions. For my free time post faculty work on individual projects such as Web Pages, design of icons, brochures, icons and flyers. I like the font-end very much, although I have experience in both of them.</p>
+					<p>Actualmente trabajo en una compañía llamada PayGroup, soy SQA en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
+            Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
+          </p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="fa fa-file-pdf-o"></i></a> <sm>DOWNLOAD PDF</sm></p>
@@ -99,28 +101,28 @@
 		<div class="row">
 
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>EDUCATION</h5>
+					<h5>EDUCACIÓN</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Master of Web Design</t><br/>
-						St. Patrick University <br/>
-						<i>3 Years Course</i>
+					<p><t>Ingeniera de Sistemas</t><br/>
+						Universidad Catolica del Uruguay <br/>
+						<i> 3 Años cursados</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>GRADUATING IN MAY 2014</sm><br/>
-					<imp><sm>IN PROGRESS</sm></imp>
+					<p><sm> 2014 - Actualmente</sm><br/>
+					<imp><sm>EN PROGRESO</sm></imp>
 					</p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Degree of Web Developer</t><br/>
-						Hastings University <br/>
-						<i>2 Years Course</i>
+					<p><t>Curso de Reparación de PC y Redes a Nivel Professiona</t><br/>
+						Cicrulo Informático <br/>
+						<i>1 Año</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2012</sm></p>
+					<p><sm>Diplomado en 2010</sm></p>
 				</div>
 
 		</div><!--/.row -->
@@ -134,26 +136,26 @@
 		<div class="row">
 
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>WORK</h5>
+					<h5>EXPERIENCIA</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Front-end Developer</t><br/>
-						Black Tie Corp. <br/>
+					<p><t>SQA - Tester </t><br/>
+						PayGroup <br/>
 					</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					<p><more>En PayGroup pertenezco al Equipo de Qa que nos encargamos de la calidad del Producto PayStudioCards que básicamente es un Core de Tarjetas que brinda soluciones que asisten a las empresas (bancos, retailers, procesadoras, adquirentes y emisores) a resolver, mejorar o incorporar herramientas para gestionar sus medios de pago, ya sean soluciones clásicas de tarjetas de crédito, débito o para administrar nuevos productos como tarjetas prepagas (físicas y virtuales) en modalidades corporate o de persona física, sistemas voucher, gestión de contracargos, pagos móviles o modernizar los sistemas actuales.</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>AUGUST 2012 - CURRENT</sm></p>
+					<imp><sm> 03/2016 - ACTUALIDAD</sm></imp>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Web Designer - Intern</t><br/>
-						Onassis Ltd. <br/>
+					<p><t>SQA - Tester</t><br/>
+						Geocom <br/>
 					</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
+					<p><more>Trabaje para Geocom casi un año, mi trabajo allí fue variado, lo que más hice fue tareas que me delegaba mi gerente, como por ejemplo documentos funcionales para enviar a clientes, también realice tareas de Testing y documentos con métricas de proyectos a los que estaba vinculado</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2010 - JULY 2012</sm></p>
+					<p><sm>10/2014 - 09/2015</sm></p>
 				</div>
 		</div><!--/.row -->
 		<br>
@@ -165,27 +167,35 @@
 	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>AWARDS</h5>
+					<h5>APTITUDES</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Best Web Design</t><br/>
-						Black Tie Site <br/>
+					<p><br/>
+						<i class="fa fa-check" aria-hidden="true"></i> Elaboracion y Gestion de Documento <br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Planeación de pruebas caja Negra y caja Blanca<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Diseño de pruebas<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> implementación de pruebas<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Evaluación de criterios de salida<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Soapui - Web Services<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Mantis<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> TestLink<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> SQL server<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Oracle sql Developer<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Manuales de Usuario<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Soporte a clientes<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Conocimiento en Core de Tarjetas<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Conocimiento de Código y Bases de Datos<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Análisis de impacto al Producto en Solicitudes de Cambio<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Soporte a Clientes<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Gestion de Wiki.<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Elaboración de Documentos funcionales<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Trato con clientes<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Trabajo en equipo<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Elaboración de Power Point con métricas de horas<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Marketing digital<br/>
+
 					</p>
 				</div>
-				<div class="col-lg-3">
-					<p><sm>NOVEMBER 2013</sm></p>
-				</div>
-
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Designer of the Year</t><br/>
-						Awwwards Site
-					</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>2013</sm></p>
-				</div>
-
 		</div><!--/.row -->
 		<br>
 	</div><!--/.container -->
@@ -241,11 +251,11 @@
 						<script>
 							var doughnutData = [
 									{
-										value: 65,
+										value: 100,
 										color:"#1abc9c"
 									},
 									{
-										value : 35,
+										value : 0,
 										color : "#ecf0f1"
 									}
 								];
@@ -289,22 +299,78 @@
 								var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
 						</script>
 					</div>
+
 					<div class="col-lg-3 centered">
-						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>Illustrator</p>
+						<canvas id="java" height="130" width="130"></canvas>
+						<p>JAVA</p>
 						<br>
 						<script>
 							var doughnutData = [
 									{
-										value: 50,
+										value: 90,
 										color:"#1abc9c"
 									},
 									{
-										value : 50,
+										value : 10,
 										color : "#ecf0f1"
 									}
 								];
-								var myDoughnut = new Chart(document.getElementById("illustrator").getContext("2d")).Doughnut(doughnutData);
+								var myDoughnut = new Chart(document.getElementById("java").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+
+          <div class="col-lg-3 col-lg-offset-3 centered">
+						<canvas id="github" height="130" width="130"></canvas>
+						<p>GitHub</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 80,
+										color:"#1abc9c"
+									},
+									{
+										value : 20,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("github").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="db" height="130" width="130"></canvas>
+						<p>Base de Datos</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 80,
+										color:"#1abc9c"
+									},
+									{
+										value : 20,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("db").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="haskell" height="130" width="130"></canvas>
+						<p>Haskell</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 60,
+										color:"#1abc9c"
+									},
+									{
+										value : 40,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("haskell").getContext("2d")).Doughnut(doughnutData);
 						</script>
 					</div>
 
@@ -323,34 +389,37 @@
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" src="img/port01.jpg" alt=""></p>
+					<p><img class="img-responsive img-efecto" src="img/myc-uy.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-					<p>CANALS OF ENGLAND</p>
-				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+					<p>MYC</p>
+				<p><more>Pagina web desarrollada con Wordpress para una importadora de Motos y Bicicletas Eléctricas <br/><br/>
 					<sm><i class="fa fa-tag"></i> design</sm></more>
 				</p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="img/port02.jpg" alt=""></p>
+					<p><img class="img-responsive img-efecto" src="img/chevroletsanjose.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>SANKEY</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+						<p>CHEVROLET SAN JOSÉ</p>
+					<p><more>Pagina web desarrollada con Wordpress para Chevrolet San José, la misma permitía ABM de Usuarios, autos, camionetas y clasificación de los items. <br/><br/>
 						<sm><i class="fa fa-tag"></i> front-end</sm></more>
 					</p>
 				</div>
+        <br/>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="img/port03.jpg" alt=""></p>
+					<p><img class="img-responsive img-efecto" src="img/asesorasdeimagen.png" alt=""></p>
 				</div>
+        <br/>
 				<div class="col-lg-3">
-						<p>WE GROW</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+						<p>ASESORAS DE IMAGEN</p>
+					<p><more>Blog web desarrollada en Wordpress para Asesoras de imagen. <br/><br/>
 						<sm><i class="fa fa-tag"></i> web design</sm></more>
 					</p>
 				</div>
+        <br/>
 
 		</div><!--/.row -->
 		<br>
@@ -369,29 +438,26 @@
 					<h5>CONTACT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Email</t><br/>
+					<p><t><i class="fa fa-envelope" aria-hidden="true"></i> Email</t><br/>
 						nicolasplacerescastifor@gmail.com <br/>
 					</p>
-					<p><t>Adress</t><br/>
+					<p><t><i class="fa fa-map" aria-hidden="true"></i> Adress</t><br/>
 						Montevideo <br/>
 						Uruguay <br/>
             <br/>
 					</p>
-					<p><t>Phone</t><br/>
+					<p><t><i class="fa fa-phone" aria-hidden="true"></i> Phone</t><br/>
 						+598 099-572-239 <br/>
 					</p>
 				</div>
 				<div class="col-lg-3 social_link">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
-						<a href="#"><i class="fa fa-dribbble"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
-						<a href="#"><i class="fa fa-apple"></i></a>
-            <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-apple"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.facebook.com/NicolasPlaceresCastifor" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+						<a href="https://www.linkedin.com/in/nicolas-placeres-219bbb95/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+            <a href="https://nico231994.github.io/" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+            <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-instagram fa-2x"> </i> </a>
+            <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-skype fa-2x" aria-hidden="true"></i> </a>
 					</p>
 				</div>
 			</div><!--/.row -->
