--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive img-efecto" src="img/chevroletsanjose.png" alt=""></p>
+					<p><img class="img-responsive img-efecto" src="img/chevroletSanJose.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 						<p>CHEVROLET SAN JOSÉ</p>
