--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Nicolas Placeres Castifor</title>
 
+  <link rel="icon" href="pictures/favicon.ico" type="image/x-icon">
+
 	<link rel="stylesheet" href="css/main.css">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
@@ -87,8 +89,8 @@
           </p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="#"><i class="fa fa-file-pdf-o"></i></a> <sm>DOWNLOAD PDF</sm></p>
-				</div>
+					<p><a href="CV Nicolas Placeres.pdf" download="CV Nicolas Placeres.pdf"><i class="fa fa-file-pdf-o"></i></a> <sm>DOWNLOAD PDF</sm></p>
+        </div>
 
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -428,48 +430,47 @@
 
 
 
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container">
-			<div class="row">
+  	<section id="contact" name="contact"></section>
+  	<!--FOOTER DESCRIPTION -->
+  	<div id="footwrap">
+  		<div class="container">
+  			<div class="row">
 
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t><i class="fa fa-envelope" aria-hidden="true"></i> Email</t><br/>
-						nicolasplacerescastifor@gmail.com <br/>
-					</p>
-					<p><t><i class="fa fa-map" aria-hidden="true"></i> Adress</t><br/>
-						Montevideo <br/>
-						Uruguay <br/>
-            <br/>
-					</p>
-					<p><t><i class="fa fa-phone" aria-hidden="true"></i> Phone</t><br/>
-						+598 099-572-239 <br/>
-					</p>
-				</div>
-				<div class="col-lg-3 social_link">
-					<p><sm>SOCIAL LINKS</sm></p>
-					<p>
-						<a href="https://www.facebook.com/NicolasPlaceresCastifor" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-						<a href="https://www.linkedin.com/in/nicolas-placeres-219bbb95/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
-            <a href="https://nico231994.github.io/" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-            <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-instagram fa-2x"> </i> </a>
-            <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-skype fa-2x" aria-hidden="true"></i> </a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
+  				<div class="col-lg-2 col-lg-offset-1">
+  					<h5>CONTACT</h5>
+  				</div>
+  				<div class="col-lg-6">
+  					<p><t><i class="fa fa-envelope" aria-hidden="true"></i> Email</t><br/>
+  						nicolasplacerescastifor@gmail.com <br/>
+  					</p>
+  					<p><t><i class="fa fa-map" aria-hidden="true"></i> Adress</t><br/>
+  						Montevideo <br/>
+  						Uruguay <br/>
+              <br/>
+  					</p>
+  					<p><t><i class="fa fa-phone" aria-hidden="true"></i> Phone</t><br/>
+  						+598 099-572-239 <br/>
+  					</p>
+  				</div>
+  				<div class="col-lg-3 social_link">
+  					<p><sm>SOCIAL LINKS</sm></p>
+  					<p>
+  						<a href="https://www.facebook.com/NicolasPlaceresCastifor" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+  						<a href="https://www.linkedin.com/in/nicolas-placeres-219bbb95/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+              <a href="https://nico231994.github.io/" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+              <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-instagram fa-2x"> </i> </a>
+              <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-skype fa-2x" aria-hidden="true"></i> </a>
+  					</p>
+  				</div>
+  			</div><!--/.row -->
+  		</div><!--/.container -->
+  	</div><!--/ #footer -->
 
-	<div id="c">
-		<div class="container">
-			<p>Created by <a href="#">Nicolas Placeres</a></p>
-
-		</div>
-	</div>
+	  <div id="c">
+      <div class="container">
+			   <p>Created by <a href="#">Nicolas Placeres</a></p>
+		  </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
@@ -478,7 +479,7 @@
     <script src="js/bootstrap.js"></script>
 
 
-<script src="js/particles.js"></script>
-<script src="js/particulas.js"></script>
-</body>
+    <script src="js/particles.js"></script>
+  <script src="js/particulas.js"></script>
+  </body>
 </html>
