cambios de letras y colores.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <!-- Custom styles for this page -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
-
-
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Play|Patrick+Hand" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
@@ -22,9 +21,7 @@
   <script src='js/script.js'></script>
 
 
-
 </head>
-
 
 <body data-spy="scroll" data-offset="0" data-target="#nav">
 	<header id="section-topbar">
@@ -393,21 +390,24 @@
 				<div class="col-lg-6">
 					<p><img class="img-responsive img-efecto" src="img/myc-uy.png" alt=""></p>
 				</div>
+
 				<div class="col-lg-3">
-					<p>MYC</p>
+					<p id="porTitle">MYC</p>
 				<p><more>Pagina web desarrollada con Wordpress para una importadora de Motos y Bicicletas Eléctricas <br/><br/>
 					<sm><i class="fa fa-tag"></i> design</sm></more>
 				</p>
+        <hr>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><img class="img-responsive img-efecto" src="img/chevroletSanJose.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>CHEVROLET SAN JOSÉ</p>
+						<p id="porTitle">CHEVROLET SAN JOSÉ</p>
 					<p><more>Pagina web desarrollada con Wordpress para Chevrolet San José, la misma permitía ABM de Usuarios, autos, camionetas y clasificación de los items. <br/><br/>
 						<sm><i class="fa fa-tag"></i> front-end</sm></more>
 					</p>
+          <hr>
 				</div>
         <br/>
 
@@ -416,10 +416,11 @@
 				</div>
         <br/>
 				<div class="col-lg-3">
-						<p>ASESORAS DE IMAGEN</p>
+						<p id="porTitle">ASESORAS DE IMAGEN</p>
 					<p><more>Blog web desarrollada en Wordpress para Asesoras de imagen. <br/><br/>
 						<sm><i class="fa fa-tag"></i> web design</sm></more>
 					</p>
+          <hr>
 				</div>
         <br/>
 
