--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/main.css">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.css">
   <!-- Custom styles for this page -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -58,8 +59,8 @@
 <div id="headerwrap">
   <div class="container">
     <div class="row centered">
-      <div class="col-lg-12">
-        <h1 id="nombre">Nicolas Placeres Castifor</h1>
+      <div class="col-lg-12 animated zoomIn">
+        <h1 id="nombre" >Nicolas Placeres Castifor</h1>
         <h3 id="nombre">Web Designer - SQA - Developer | nicolasplaceresCastifor@gmail.com</h3>
       </div><!--/.col-lg-12 -->
     </div><!--/.row -->
@@ -74,14 +75,14 @@
 
 	<section id="about" name="about"></section>
 	<div id="intro">
-		<div class="container">
+		<div class="container animated zoomIn">
 			<div class="row">
 
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>Actualmente trabajo en una compañía llamada PayGroup, soy SQA en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
+					<p >Actualmente trabajo en una compañía llamada PayGroup, soy SQA en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
             Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
           </p>
 				</div>
@@ -232,6 +233,7 @@
 						<script>
 							var doughnutData = [
 									{
+
 										value: 90,
 										color:"#1abc9c"
 									},
