--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
         			<ul>
                 <li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="fa fa-user"></i></a></li>
                 <li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="fa fa-file"></i></a></li>
-        				<!--a href='#'><li><i class="fa fa-user"></i></li></a>
-        				<a href='#resume'><li><i class="fa fa-file"></i></li></a-->
+
         			</ul>
 
-        				<img id='logo' src='pictures/logo.png'>
+        				<img id='logo' class="animated slideInDown" src='pictures/logo.png'>
 
         			<ul>
                 <li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="fa fa-briefcase"></i></a></li>
   							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="fa fa-envelope"></i></a></li>
-        				<!--a href='#work'><li><i class="fa fa-briefcase"></i></li></a>
-        				<a href='#contact'><li><i class="fa fa-envelope"></i></li></a-->
+
         			</ul>
         		</nav>
           </div> <!--/ #dropdown -->
@@ -62,6 +60,11 @@
       <div class="col-lg-12 animated zoomIn">
         <h1 id="nombre" >Nicolas Placeres Castifor</h1>
         <h3 id="nombre">Web Designer - SQA - Developer | nicolasplaceresCastifor@gmail.com</h3>
+        <a href="https://www.facebook.com/NicolasPlaceresCastifor" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/nicolas-placeres-219bbb95/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+        <a href="https://nico231994.github.io/" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-instagram fa-2x"> </i> </a>
+        <a href="https://www.instagram.com/nicoplaceres/" target="_blank" > <i class="fa fa-skype fa-2x" aria-hidden="true"></i> </a>
       </div><!--/.col-lg-12 -->
     </div><!--/.row -->
   </div><!--/.container -->
@@ -170,7 +173,7 @@
 					<h5>APTITUDES</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><br/>
+					<p id="skillsIcons"><br/>
 						<i class="fa fa-check" aria-hidden="true"></i> Elaboracion y Gestion de Documento <br/>
             <i class="fa fa-check" aria-hidden="true"></i> Planeación de pruebas caja Negra y caja Blanca<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Diseño de pruebas<br/>
