--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>APTITUDES</h5>
-				</div>
+          <i class="fa fa-code fa-2x" aria-hidden="true"></i>
+
+        </div>
 				<div class="col-lg-6">
 					<p id="skillsIcons"><br/>
 						<i class="fa fa-check" aria-hidden="true"></i> Elaboracion y Gestion de Documento <br/>
@@ -474,7 +476,8 @@
 
 	  <div id="c">
       <div class="container">
-			   <p>Created by <a href="#">Nicolas Placeres</a></p>
+
+			   <p>Created by <i class="fa fa-registered" aria-hidden="true"></i> <a href="#"> Nicolas Placeres</a></p>
 		  </div>
     </div>
 
