Correcion de identacion

--- a/index.html
+++ b/index.html
@@ -218,55 +218,60 @@
 						<p>Javascript</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 70,
-										color:"#1abc9c"
-									},
-									{
-										value : 30,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 70,
+    color: "#1abc9c"
+  },
+  {
+    value: 30,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("javascript").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="bootstrap" height="130" width="130"></canvas>
 						<p>Bootstrap</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-
-										value: 90,
-										color:"#1abc9c"
-									},
-									{
-										value : 10,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 90,
+    color: "#1abc9c"
+  },
+  {
+    value: 10,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("bootstrap").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="wordpress" height="130" width="130"></canvas>
 						<p>Wordpress</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 100,
-										color:"#1abc9c"
-									},
-									{
-										value : 0,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 100,
+    color: "#1abc9c"
+  },
+  {
+    value: 0,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("wordpress").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 
 					<div class="col-lg-3 col-lg-offset-3 centered">
@@ -274,36 +279,40 @@
 						<p>HTML/CSS</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 80,
-										color:"#1abc9c"
-									},
-									{
-										value : 20,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("html").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 80,
+    color: "#1abc9c"
+  },
+  {
+    value: 20,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("html").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="photoshop" height="130" width="130"></canvas>
 						<p>Photoshop</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 70,
-										color:"#1abc9c"
-									},
-									{
-										value : 30,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 70,
+    color: "#1abc9c"
+  },
+  {
+    value: 30,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("photoshop").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 
 					<div class="col-lg-3 centered">
@@ -311,18 +320,20 @@
 						<p>JAVA</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 90,
-										color:"#1abc9c"
-									},
-									{
-										value : 10,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("java").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 90,
+    color: "#1abc9c"
+  },
+  {
+    value: 10,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("java").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 
           <div class="col-lg-3 col-lg-offset-3 centered">
@@ -330,54 +341,60 @@
 						<p>GitHub</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 80,
-										color:"#1abc9c"
-									},
-									{
-										value : 20,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("github").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 80,
+    color: "#1abc9c"
+  },
+  {
+    value: 20,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("github").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="db" height="130" width="130"></canvas>
 						<p>Base de Datos</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 80,
-										color:"#1abc9c"
-									},
-									{
-										value : 20,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("db").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 80,
+    color: "#1abc9c"
+  },
+  {
+    value: 20,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("db").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="haskell" height="130" width="130"></canvas>
 						<p>Haskell</p>
 						<br>
 						<script>
-							var doughnutData = [
-									{
-										value: 60,
-										color:"#1abc9c"
-									},
-									{
-										value : 40,
-										color : "#ecf0f1"
-									}
-								];
-								var myDoughnut = new Chart(document.getElementById("haskell").getContext("2d")).Doughnut(doughnutData);
-						</script>
+						var doughnutData = [
+  {
+    value: 60,
+    color: "#1abc9c"
+  },
+  {
+    value: 40,
+    color: "#ecf0f1"
+  }
+];
+var myDoughnut = new Chart(
+  document.getElementById("haskell").getContext("2d")
+).Doughnut(doughnutData);
+</script>
 					</div>
 
 			</div><!--/.row -->
