Correcion de Errores de Ortografia.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Curso de Reparación de PC y Redes a Nivel Professiona</t><br/>
-						Cicrulo Informático <br/>
+					<p><t>Curso de Reparación de PC y Redes a Nivel Profesional</t><br/>
+						Circulo Informático <br/>
 						<i>1 Año</i>
 					</p>
 				</div>
@@ -176,7 +176,7 @@
         </div>
 				<div class="col-lg-6">
 					<p id="skillsIcons"><br/>
-						<i class="fa fa-check" aria-hidden="true"></i> Elaboracion y Gestion de Documento <br/>
+						<i class="fa fa-check" aria-hidden="true"></i> Elaboración y Gestión de Documento <br/>
             <i class="fa fa-check" aria-hidden="true"></i> Planeación de pruebas caja Negra y caja Blanca<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Diseño de pruebas<br/>
             <i class="fa fa-check" aria-hidden="true"></i> implementación de pruebas<br/>
@@ -192,7 +192,7 @@
             <i class="fa fa-check" aria-hidden="true"></i> Conocimiento de Código y Bases de Datos<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Análisis de impacto al Producto en Solicitudes de Cambio<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Soporte a Clientes<br/>
-            <i class="fa fa-check" aria-hidden="true"></i> Gestion de Wiki.<br/>
+            <i class="fa fa-check" aria-hidden="true"></i> Gestión de Wiki.<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Elaboración de Documentos funcionales<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Trato con clientes<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Trabajo en equipo<br/>
